[gd_scene load_steps=6 format=3 uid="uid://de2njdhrkc44u"]

[ext_resource type="Script" path="res://Actors/CraftingTable.gd" id="1_0ykex"]
[ext_resource type="Texture2D" uid="uid://cnrnkitswy4ct" path="res://Images/Crafting-Table-icon.png" id="1_23fn1"]
[ext_resource type="Texture2D" uid="uid://clu2g7nkhtddp" path="res://Images/858962.png" id="3_3v4t1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_waqdk"]
size = Vector2(302, 257)

[sub_resource type="SpriteFrames" id="SpriteFrames_6hm0q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3v4t1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CraftingTable" type="Area2D"]
script = ExtResource("1_0ykex")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1.5)
shape = SubResource("RectangleShape2D_waqdk")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_23fn1")

[node name="InteractIcon" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1, -89)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_6hm0q")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
